--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Android Build with DeepSeek Recoding & Fixes
+name: Android Build with Focused DeepSeek Recoding
 
 on:
   release:
@@ -8,120 +8,139 @@ on:
 jobs:
   recode-and-build:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
+    timeout-minutes: 45
     env:
       DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
-      RECODE_TARGETS: "**/*.kt,src/main/res/layout/*.xml,build.gradle.kts"  # Focus on critical files
-      MAX_FILES: 30
-      MAX_FILE_SIZE: 10000
-      PARALLEL_JOBS: 4
-      MODEL: deepseek-coder-6.7b-instruct  # Faster model
+      MAX_FILES: 15  # Reduced to focus on critical files
+      MODEL: deepseek-coder-6.7b-instruct
 
     steps:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 50
         
-    # DeepSeek-powered code recoding with specialized fixes
-    - name: Recode files with DeepSeek
+    # Focused DeepSeek-powered code recoding
+    - name: Recode critical files with DeepSeek
       id: deepseek_recode
       continue-on-error: true
       run: |
         # Install dependencies
-        sudo apt-get install -y jq parallel
+        sudo apt-get install -y jq
         pip install regex
 
+        # Define target directories
+        TARGET_DIRS=(
+          "common/src/commonMain/kotlin/tk/zwander/"
+          "android/src/main/"
+          "build.gradle.kts"
+        )
+        
         # Find and select target files
-        files=$(find . -type f \( -name "*.kt" -o -name "*.xml" -o -name "*.gradle.kts" \) -size -${MAX_FILE_SIZE}c | head -n $MAX_FILES)
-        echo "Selected ${MAX_FILES} files for recoding:"
+        files=""
+        for dir in "${TARGET_DIRS[@]}"; do
+          files+="$(find "$dir" -type f \( -name "*.kt" -o -name "*.xml" -o -name "*.gradle.kts" \) -size -10000c 2>/dev/null | head -n 5) "
+        done
+        
+        # Select unique files up to MAX_FILES
+        files=$(echo "$files" | tr ' ' '\n' | sort -u | head -n $MAX_FILES)
+        echo "Selected files for recoding:"
         echo "$files" | sed 's/^/ - /'
         
         # Backup original files
         mkdir -p original_files
         for file in $files; do
-          cp "$file" "original_files/${file//\//_}"
+          [ -f "$file" ] && cp "$file" "original_files/${file//\//_}"
         done
         
-        # Create processing script with specialized fixes
-        cat > recode_worker.sh <<'EOF'
-        #!/bin/bash
-        file=$1
-        
-        # Get git context
-        history=$(git log --pretty=format:"%ad %s" --date=short -n 3 -- "$file")
-        content=$(cat "$file")
-        
-        # Specialized prompts for known issues
-        if [[ "$file" == *"PhoneInfoView.kt" ]]; then
-          system_msg="Fix deprecated 'LocalClipboardManager' usage by replacing with 'LocalClipboard' which supports suspend functions. Ensure coroutine context is handled properly."
-        elif [[ "$file" == *"build.gradle.kts" ]]; then
-          system_msg="Update Ktor dependencies to version 3.3.0 or newer to resolve DEX space character issue. Also ensure Java 21 compatibility."
-        else
-          system_msg="Recode Android file: 1) Fix warnings and deprecations 2) Optimize performance 3) Modernize practices 4) Keep all functionality. Output ONLY the recoded file content."
-        fi
-        
-        prompt=$(jq -n \
-          --arg history "$history" \
-          --arg content "$content" \
-          --arg file "$file" \
-          --arg sys "$system_msg" \
-          '{
-            model: env.MODEL,
-            messages: [
-              {
-                role: "system",
-                content: $sys
-              },
-              {
-                role: "user",
-                content: ("File: \($file)\nHistory:\n\($history)\n\nCurrent content:\n\($content)")
-              }
-            ],
-            max_tokens: 4096,
-            temperature: 0.2
-          }')
+        # Process each file with focused prompts
+        processed=0
+        for file in $files; do
+          [ ! -f "$file" ] && continue
           
-        response=$(curl -s https://api.deepseek.com/v1/chat/completions \
-          -H "Authorization: Bearer $DEEPSEEK_API_KEY" \
-          -H "Content-Type: application/json" \
-          -d "$prompt")
+          echo "🔁 Recoding $file"
           
-        new_content=$(echo "$response" | jq -r '.choices[0].message.content')
-        
-        if [ -n "$new_content" ] && [ "$new_content" != "null" ]; then
-          # Clean and validate output
-          cleaned_content=$(echo "$new_content" | python -c "import sys, re; print(re.sub(r'^```[a-zA-Z]*\n|\n```$', '', sys.stdin.read(), flags=re.MULTILINE))")
+          # Get git context
+          history=$(git log --pretty=format:"%h %ad %s" --date=short -n 3 -- "$file" 2>/dev/null)
           
-          if [ -n "$cleaned_content" ]; then
-            echo "$cleaned_content" > "$file"
-            echo "✅ $file"
+          # Read file content
+          content=$(cat "$file")
+          
+          # Custom prompts based on file type/location
+          if [[ "$file" == *"PhoneInfoView.kt" ]]; then
+            system_msg="Fix the deprecated 'LocalClipboardManager' usage by replacing it with 'LocalClipboard' which supports suspend functions. Ensure proper coroutine handling and maintain all functionality."
+          elif [[ "$file" == *"build.gradle.kts" ]]; then
+            system_msg="Update Ktor dependencies to version 3.3.0 or newer to resolve DEX space character issues. Also add core library desugaring for Java 21 compatibility. Output only the updated build file content."
+          elif [[ "$file" == *".xml" ]]; then
+            system_msg="Optimize Android XML layout: 1) Improve performance 2) Fix any warnings 3) Use modern ConstraintLayout best practices 4) Maintain identical UI appearance."
           else
-            echo "⚠️ Empty output for $file"
+            system_msg="Improve Kotlin code: 1) Fix deprecations 2) Optimize performance 3) Apply modern Kotlin practices 4) Resolve any warnings 5) Maintain all functionality."
           fi
-        else
-          echo "⚠️ No changes for $file"
-        fi
-        EOF
+          
+          # Build AI prompt
+          prompt=$(jq -n \
+            --arg history "$history" \
+            --arg content "$content" \
+            --arg file "$file" \
+            --arg sys "$system_msg" \
+            '{
+              model: env.MODEL,
+              messages: [
+                {
+                  "role": "system",
+                  "content": $sys
+                },
+                {
+                  "role": "user",
+                  "content": ("File: \($file)\nHistory:\n\($history)\n\nCurrent content:\n\($content)")
+                }
+              ],
+              max_tokens: 4096,
+              temperature: 0.1
+            }')
+            
+          # Call DeepSeek API
+          response=$(curl -s https://api.deepseek.com/v1/chat/completions \
+            -H "Authorization: Bearer $DEEPSEEK_API_KEY" \
+            -H "Content-Type: application/json" \
+            -d "$prompt")
+          
+          # Extract new content
+          new_content=$(echo "$response" | jq -r '.choices[0].message.content')
+          
+          # Validate and save
+          if [ -n "$new_content" ] && [ "$new_content" != "null" ]; then
+            # Remove non-code artifacts using regex
+            cleaned_content=$(echo "$new_content" | python -c "import sys, re; print(re.sub(r'^```[a-zA-Z]*\n|\n```$', '', sys.stdin.read(), flags=re.MULTILINE))")
+            
+            if [ -n "$cleaned_content" ]; then
+              echo "$cleaned_content" > "$file"
+              echo "✅ Recoded $file"
+              processed=$((processed+1))
+            else
+              echo "⚠️ Empty output for $file"
+            fi
+          else
+            echo "⚠️ No changes for $file"
+          fi
+          
+          # Avoid rate limiting
+          sleep 0.5
+        done
         
-        chmod +x recode_worker.sh
-        echo "$files" | parallel -j $PARALLEL_JOBS ./recode_worker.sh {}
-        
-        # Count modified files
-        modified_files=$(git diff --name-only | wc -l)
-        echo "modified=$modified_files" >> $GITHUB_OUTPUT
+        echo "processed=$processed" >> $GITHUB_OUTPUT
 
-    # Additional explicit fixes
+    # Explicit fixes for known issues
     - name: Apply Critical Fixes
       run: |
         # 1. Fix ClipboardManager deprecation
-        find . -name '*.kt' -exec sed -i 's/LocalClipboardManager\.current/LocalClipboard.current/g' {} \;
+        find . -name 'PhoneInfoView.kt' -exec sed -i 's/LocalClipboardManager\.current/LocalClipboard.current/g' {} \;
         
-        # 2. Fix Ktor DEX error by updating to 3.3.0+
+        # 2. Fix Ktor DEX error
         sed -i -E 's/ktor-client-core(-jvm)?:[0-9]+\.[0-9]+\.[0-9]+/ktor-client-core\1:3.3.0/g' build.gradle.kts
         sed -i -E 's/ktor-client-core:[0-9]+\.[0-9]+\.[0-9]+/ktor-client-core:3.3.0/g' build.gradle.kts
         
-        # 3. Add coreLibraryDesugaring for Java 21 features
-        sed -i "s/android {/android {\n    compileOptions {\n        coreLibraryDesugaringEnabled true\n    }/g" build.gradle.kts
+        # 3. Add coreLibraryDesugaring for Java 21
+        sed -i "/android {/a\    compileOptions {\n        coreLibraryDesugaringEnabled = true\n    }" build.gradle.kts
         sed -i "/dependencies {/a\    coreLibraryDesugaring(\"com.android.tools:desugar_jdk_libs:2.0.4\")" build.gradle.kts
         
         # 4. Increase DEX heap size
@@ -129,7 +148,7 @@ jobs:
 
     - name: Show recoding results
       run: |
-        echo "Modified files: ${{ steps.deepseek_recode.outputs.modified }}"
+        echo "Files processed: ${{ steps.deepseek_recode.outputs.processed }}"
         git diff --stat
         
     # Build environment setup
